# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import defectsRouter from "./defects";
 import storageRouter from "./storage";
 import authRouter from "./auth";
+import projectsRouter from "./projects";
 import { requireAuth } from "../middlewares/requireAuth";
 
 const router: IRouter = Router();
@@ -12,5 +13,6 @@ router.use(authRouter);
 router.use(requireAuth);
 router.use(defectsRouter);
 router.use(storageRouter);
+router.use(projectsRouter);
 
 export default router;
